# calculator

./: CMakeLists.txt  Expression.cpp  Expression.h  ExpressionParser.cpp  ExpressionParser.h  Makefile  Operations.cpp  Operations.h  README.md  calc.cpp  calc.h  main  main.cpp  main_func.cpp  main_func.h  other_func.cpp  other_func.h  tikenizer.cpp  tokenizer.cpp  tokenizer.h
include/: ExpressionParser.h  Operations.h  main_func.h
src/: ExpressionParser.cpp  Operations.cpp  calc.cpp  main_func.cpp
tests/: CMakeLists.txt  test_streq.cpp  tests_calculate.cpp  tests_operation.cpp  tests_parser.cpp
